@startuml

/'
 ' set size and orientation
 '/
scale 1000 width          /' Set dimensions '/
skinparam linetype ortho  /' Avoid diagonal, as it doesn't look great in ERD '/

hide circle         /' Hide "E" symbol '/
hide empty fields   /' remove empty bar '/
hide empty methods  /' remove empty bar '/

'------------------------------------------------------------------------------
' Entities

entity troopers {
    * id
}

entity ships {
    * id
}

entity droids {
    * id
}

entity loadOuts {
    * id
}

entity garrisons {
    * id
}

'------------------------------------------------------------------------------
' Composite Entities

'entity shipTrooperManifest {
'    * shipID
'    * trooperID
'}
'
'entity shipDroidManfiest {
'    * shipID
'    * droidID
'}

'------------------------------------------------------------------------------
' Relationships

garrisons |o-o{ troopers:\t
loadOuts ||--|{ troopers  /' TODO: check if this is in fact 1-to-1 or 1-to-many '/

'troopers ships M:M relationship relies on composite entity shipTrooperManifest
troopers }o-o{ ships:\t
'troopers ||--o{ shipTrooperManifest
'shipTrooperManifest }o-|| ships:\t

'droids ships M:M relationship relies on composite entity shipDroidManifest
ships }o-o{ droids:\t
'ships ||--o{ shipDroidManfiest
'shipDroidManfiest }o-|| droids:\t
@enduml
